--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -42,3 +42,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
+
+# Enable RGB extension for layer indication
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
